# reverse-twitter-scraper

./: LICENSE  README.md  ReverseTwitterScraper.py  Scraper  setup.cfg  setup.py
ReverseTwitterScraper/: ReverseTwitterScraper.py  Scraper.py  __init__.py
Scraper/: ReverseTwitterScraper.py  __init__.py
tests/: unitTestsMethods.py  unitTestsSetup.py
