[metadata]
name = ReverseTwitterScraper
version = 0.0.1
author = 1220moritz
description = A request based package for scraping twitter data. No API Key required. Support for proxies and private twitter accounts.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/1220moritz/reverse-twitter-scraper
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    
[options]
package = find:
python_requires = >=3.7
